--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 					</div>
 		
 					<div style="text-align: center;"><br>
-						<a class="button is-success is-rounded" href="https://bydan.github.io/Tesis/plan/pag-menu/pag-menu.html" target="_blank"><b>DOCUMENTACIÓN</b></a>
+						<a class="button is-success is-rounded" href="https://bydan.github.io/Tesis/plan/pag-menu/pag-menu.html" target="_blank"><b>PLAN</b></a>
+
+						<a class="button is-success is-rounded" href="https://bydan.github.io/Tesis/plan/pag-menu/pag-menu.html" target="_blank"><b>TESIS</b></a>
+
 						<a class="button is-link is-rounded" href="http://tesisuce.atwebpages.com/contabilidad0/GlobalController.php?view=Login" target="_blank"><b>PRÁCTICA</b></a>
 					</div>		
 			
